[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/squad/squad.gd" id="1"]

[node name="Squad" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.25, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 16

[node name="TopBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Squad Management"

[node name="SquadCount" type="Label" parent="VBox/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Squad: 0/4"

[node name="BackButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "Back"

[node name="Panels" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="SquadPanel" type="VBoxContainer" parent="VBox/Panels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="SquadLabel" type="Label" parent="VBox/Panels/SquadPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
text = "Active Squad"

[node name="SquadHint" type="Label" parent="VBox/Panels/SquadPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Click a member to move them to the bench"

[node name="SquadList" type="VBoxContainer" parent="VBox/Panels/SquadPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="BenchPanel" type="VBoxContainer" parent="VBox/Panels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="BenchLabel" type="Label" parent="VBox/Panels/BenchPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.8, 0.8, 0.4, 1)
text = "Bench"

[node name="BenchHint" type="Label" parent="VBox/Panels/BenchPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Click a character to add them to the squad"

[node name="BenchList" type="VBoxContainer" parent="VBox/Panels/BenchPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
